--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,3 @@
----
-title: Devlog
----
 <!DOCTYPE html>
 <html>
 
@@ -10,7 +7,11 @@ title: Devlog
 </head>
 
 <body>
-    {{ content }}
+    {% include series.html %}
+    <article>
+        <h2>{{ page.title }}</h2>
+        {{ content }}
+    </article>
 </body>
 
 </html>
