--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -25,3 +25,13 @@ tr.even {
 .convenience {
     background-color: #AADD80;
 }
+
+.infobox {
+    padding: 0.5em;
+    margin: 2em;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05)
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05)
+}
