--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -1,6 +1,13 @@
     <meta charset='utf-8' />
     <meta http-equip='content-type' content='text/html; charset=utf-8' />
 
-    <link rel='stylesheet' href='/styles/syntax.css' type='text/css' />
-    <link rel='stylesheet' href='/styles/stylesheet.css' type='text/css' />
-    <link rel='stylesheet' href='/styles/buttondown.css' type='text/css' />
+    <!-- Enable responsiveness on mobile devices-->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1' />
+
+    <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
+
+    <link rel='stylesheet' href='/styles/poole.css' type='text/css' />
+    <link rel='stylesheet' href='/styles/blackdoc.css' type='text/css' />
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface' type='text/css' />
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=EB+Garamond' type='text/css' />
+    <link rel='stylesheet' href='/styles/zenburn.css' type='text/css' />
