--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -4,10 +4,11 @@
     <!-- Enable responsiveness on mobile devices-->
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1' />
 
-    <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
+    <!-- <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' /> -->
 
     <link rel='stylesheet' href='/styles/poole.css' type='text/css' />
     <link rel='stylesheet' href='/styles/blackdoc.css' type='text/css' />
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface' type='text/css' />
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=EB+Garamond' type='text/css' />
+    <!-- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface' type='text/css' /> -->
+    <!-- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=EB+Garamond' type='text/css' /> -->
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Work+Sans:400,700|Inconsolata:400,700' type='text/css' />
     <link rel='stylesheet' href='/styles/zenburn.css' type='text/css' />
