--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -8,6 +8,7 @@
 
     <link rel='stylesheet' href='/styles/poole.css' type='text/css' />
     <link rel='stylesheet' href='/styles/blackdoc.css' type='text/css' />
+    <link rel='stylesheet' href='/styles/stylesheet.css' type='text/css' />
     <!-- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface' type='text/css' /> -->
     <!-- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=EB+Garamond' type='text/css' /> -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Work+Sans:400,700|Inconsolata:400,700' type='text/css' />
